# garudadidadaa

./: README.md
csharp/: README.md
csharp/src/Garudadidada/: Garudadidada.csproj
dart/: README.md  pubspec.yaml
dart/test/: garudadidada_test.dart
elixir/: README.md  mix.exs
elixir/test/: garudadidada_test.exs
go/: README.md  go.mod  humanize_test.go
java/: LICENSE  README.md  pom.xml
java/src/test/java/io/github/garudadidada/: HumanizeTest.java
php/: README.md  composer.json
php/tests/: HumanizeTest.php
python/: README.md  pyproject.toml
python/tests/: test_garudadidada.py
ruby/: README.md  garudadidada-1.0.0.gem  garudadidada.gemspec
ruby/lib/garudadidada/: version.rb
ruby/test/: test_garudadidada.rb
