[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "garudadidada"
version = "1.0.0"
description = "Tiny zero-dependency helpers to humanize values: bytes, durations, ordinals, pluralization."
readme = "README.md"
requires-python = ">=3.7"
license = { text = "MIT" }
authors = [{ name = "garudadidada" }]
keywords = ["humanize", "format", "bytes", "duration", "ordinal", "pluralize"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/garudadidada/garudadidadaa"

[tool.setuptools.packages.find]
where = ["src"]
